--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,11 +1,16 @@
-<div class="nav-container">
-  <nav>
-    <img src="assets/logo.svg" alt="logo">
-    <ul class="nav-links">
-      <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
-      <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
-      <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
-      <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
-    </ul>
-  </nav>
+<div class="header">
+  <div class="nav-container">
+    <div class="logo">
+      <img src="assets/logo.svg" alt="logo">
+    </div>
+    <nav>
+      <ul class="nav-links">
+        <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
+        <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
+        <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
+        <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
+      </ul>
+    </nav>
+  </div>
 </div>
+
