Add log in button to the navbar for future authentication
Navbar now holds a log in button that can be used for further implementation of authentication. Can redirect to a log in page or refer to a modal, decide on this in the future.

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -11,6 +11,8 @@
         <li><a [routerLink]="['/']" routerLinkActive="active-link">placeholder</a></li>
       </ul>
     </nav>
+    <div class="secondary-nav">
+      <button class="btn-login" type="button">Log in</button>    
+    </div>
   </div>
 </div>
-
